# snowoptics

./: .travis.yml  LICENSE  README.md  pyproject.toml
.github/workflow/: pytest.yml
.github/workflows/: publish.yml
examples/: correction_timeseries.ipynb
snowoptics/: __init__.py  refractive_index.py  snowoptics.py
tests/: test_albedo.py
