[tool.poetry]
name = "snowoptics"
version = "0.90"
description = "Set of functions to compute spectral albedo and extinction of snow, and to correct albedo measurements from slope distortion."
authors = ["Ghislain Picard <ghislain.picard@univ-grenoble-alpes.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
numpy = ">=1.10"
scipy = ">=1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
